k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-ingress
  namespace: ollamahub
  labels:
    app.kubernetes.io/name: ollamahub-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ollama.ai.com
    http:
      paths:

      - pathType: Prefix
        path: /
        backend:
          service:
            name: web-app-service
            port: 
              number: 80
      
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: backend-service
            port: 
              number: 8000
